--- a/index.html
+++ b/index.html
@@ -516,12 +516,11 @@
             </nav>
 
         <div class="school-info-card card">
-            <h3>Contact Us</h3>
-            <p><strong>Address:</strong> Your School Address Here</p>
-            <p><strong>Phone:</strong> +95 9XXXXXXXXX</p>
-            <p><strong>Email:</strong> info@okaythai.com</p>
-            <p><strong>Business Hours:</strong> Mon-Fri: 9 AM - 5 PM</p>
-        </div>
+            </div>
+
+        <a href="https://www.facebook.com/share/1AhRXANLEm/?mibextid=wwXIfr" target="_blank" class="action-button facebook-link">
+            <span class="button-icon">📘</span> <span class="button-text">Facebook Page</span>
+        </a>
     </div>
 
     <div class="chat-window">
@@ -570,10 +569,6 @@
     </div>
 </div>
 
-<audio id="audio-en" src="https://example.com/audio/hello.mp3" preload="auto"></audio>
-<audio id="audio-th" src="https://example.com/audio/sawadeeka.mp3" preload="auto"></audio>
-<audio id="audio-mm" src="https://example.com/audio/mingalapar.mp3" preload="auto"></audio>
-
 <script>
     // --- UTILITY & SETUP ---
     const chatLog = document.getElementById('chat-log');
@@ -587,7 +582,7 @@
     let currentLanguage = 'en';
     let currentTheme = 'theme-default';
 
-    // School contact information (new data structure)
+    // School contact information
     const schoolInfo = {
         address: {
             en: 'Your School Address Here',
@@ -610,6 +605,16 @@
             en: 'Thank you! We have received your details and a staff member will contact you shortly.',
             mm: 'ကျေးဇူးတင်ပါသည်။ သင့်အချက်အလက်များကို လက်ခံရရှိပြီး မကြာမီ ဆက်သွယ်ပါမည်။',
             th: 'ขอบคุณค่ะ! เราได้รับข้อมูลของคุณแล้ว และเจ้าหน้าที่จะติดต่อกลับไปโดยเร็วที่สุดค่ะ'
+        },
+        culturalIntroBotGreeting: { // New greeting for cultural chatbot
+            en: "Hello! I am your Cultural Compass. I have deep knowledge about both Thai and Myanmar cultures. Ask me anything about traditions, festivals, food, etiquette, or even historical tidbits!",
+            mm: "မင်္ဂလာပါ! ကျွန်တော်က ယဉ်ကျေးမှုလမ်းညွှန် AI ပါ။ ထိုင်းနှင့် မြန်မာယဉ်ကျေးမှု၊ ဓလေ့ထုံးတမ်း၊ ပွဲတော်များ၊ အစားအသောက်များ၊ ကျင့်ဝတ်များနှင့် သမိုင်းကြောင်းများကို အသေးစိတ်သိရှိပါတယ်။ ဘာမေးချင်ပါသလဲ?",
+            th: "สวัสดีค่ะ! ดิฉันคือเข็มทิศวัฒนธรรมค่ะ ดิฉันมีความรู้ลึกซึ้งเกี่ยวกับวัฒนธรรมไทยและเมียนมาอย่างกว้างขวาง ถามได้ทุกเรื่องเกี่ยวกับประเพณี เทศกาล อาหาร มารยาท หรือแม้แต่เกร็ดประวัติศาสตร์นะคะ!"
+        },
+        questionLabel: {
+            en: "Question",
+            mm: "မေးခွန်း",
+            th: "คำถาม"
         }
     };
 
@@ -672,10 +677,12 @@
             nameLabel: 'Name', priceLabel: 'Price', durationLabel: 'Duration', methodLabel: 'Method', qualificationLabel: 'Qualification', workLabel: 'Work',
             teachingLabel: 'Teaching', collapseSidebar: 'Collapse Sidebar', expandSidebar: 'Expand Sidebar',
             helloGreeting: 'Hello', sawasdeeGreeting: 'Sawasdee Ka', mingalaparGreeting: 'Mingalapar',
-            talkToHuman: 'Talk to a Human  👤', provideContactPrompt: 'Please provide your name and phone number so a staff member can contact you:',
-            yourName: 'Your Name', yourPhoneNumber: 'Your Phone Number', submit: 'Submit', contactSubmitted: 'Thank you! A staff member will contact you shortly.',
+            talkToHuman: 'Talk to a Human  👤', provideContactPrompt: 'Please provide your name and phone number, and a staff member will contact you shortly.',
+            yourName: 'Your Name', yourPhoneNumber: 'Your Phone Number', submit: 'Submit', contactSubmitted: 'Thank you! We have received your details and a staff member will contact you shortly.',
             enrollNowFull: 'Enroll Now (Full Version)', fillOutForm: 'Fill out Enrollment Form',
-            schoolAddressLabel: 'Address', schoolPhoneLabel: 'Phone', schoolEmailLabel: 'Email', schoolHoursLabel: 'Business Hours'
+            schoolAddressLabel: 'Address', schoolPhoneLabel: 'Phone', schoolEmailLabel: 'Email', schoolHoursLabel: 'Business Hours',
+            contactUsTitle: 'Contact Us', culturalIntroBotGreeting: schoolInfo.culturalIntroBotGreeting.en, // Link to schoolInfo
+            questionLabel: schoolInfo.questionLabel.en
         },
         mm: {
             welcome: ' မင်္ဂလာပါ။  OKay Thai Language Center  မှ   ကြိုဆိုပါတယ်။   ကျွန်တော်က  AI Concierge  ပါ။ ဒီနေ့   ဘာအကူအညီပေးရမလဲခင်ဗျာ။ ',
@@ -707,10 +714,12 @@
             nameLabel: ' အမည် ', priceLabel: ' စျေးနှုန်း ', durationLabel: ' ကြာချိန် ', methodLabel: ' သင်ကြားနည်း ', qualificationLabel: ' အရည်အချင်း ', workLabel: ' အလုပ် ', teachingLabel: ' သင်ကြားမှု ',
             collapseSidebar: 'ဘေးဘောင်ပိတ်ရန်', expandSidebar: 'ဘေးဘောင်ဖွင့်ရန်',
             helloGreeting: 'Hello (မင်္ဂလာပါ)', sawasdeeGreeting: 'Sawadeeka (สวัสดีค่ะ)', mingalaparGreeting: 'Mingalapar (မင်္ဂလာပါ)',
-            talkToHuman: 'လူနှင့်စကားပြောရန်  👤', provideContactPrompt: 'ဝန်ထမ်းမှ ဆက်သွယ်နိုင်ရန် သင့်အမည်နှင့် ဖုန်းနံပါတ်ကို ပေးပါ။',
-            yourName: 'သင့်အမည်', yourPhoneNumber: 'သင့်ဖုန်းနံပါတ်', submit: 'ပေးပို့ရန်', contactSubmitted: 'ကျေးဇူးတင်ပါသည်။ ဝန်ထမ်းမှ မကြာမီ ဆက်သွယ်ပါမည်။',
+            talkToHuman: 'လူနှင့်စကားပြောရန်  👤', provideContactPrompt: schoolInfo.contactPersonPrompt.mm,
+            yourName: 'သင့်အမည်', yourPhoneNumber: 'သင့်ဖုန်းနံပါတ်', submit: 'ပေးပို့ရန်', contactSubmitted: schoolInfo.contactSuccess.mm,
             enrollNowFull: 'ယခုစာရင်းသွင်းရန် (အပြည့်အစုံ)', fillOutForm: 'စာရင်းသွင်းဖောင်ဖြည့်ရန်',
-            schoolAddressLabel: 'လိပ်စာ', schoolPhoneLabel: 'ဖုန်း', schoolEmailLabel: 'အီးမေးလ်', schoolHoursLabel: 'ဖွင့်ချိန်'
+            schoolAddressLabel: 'လိပ်စာ', schoolPhoneLabel: 'ဖုန်း', schoolEmailLabel: 'အီးမေးလ်', schoolHoursLabel: 'ဖွင့်ချိန်',
+            contactUsTitle: 'ဆက်သွယ်ရန်', culturalIntroBotGreeting: schoolInfo.culturalIntroBotGreeting.mm, // Link to schoolInfo
+            questionLabel: schoolInfo.questionLabel.mm
         },
         th: {
             welcome: ' สวัสดีค่ะ ! ยินดีต้อนรับสู่  OKay Thai Language Center  ดิฉันคือ  AI Concierge  ค่ะ   วันนี้มีอะไรให้ช่วยคะ ',
@@ -742,10 +751,12 @@
             nameLabel: ' ชื่อ ', priceLabel: ' ราคา ', durationLabel: ' ระยะเวลา ', methodLabel: ' วิธีการสอน ', qualificationLabel: ' คุณวุฒิ ', workLabel: ' การทำงาน ', teachingLabel: ' การสอน ',
             collapseSidebar: 'ยุบแถบด้านข้าง', expandSidebar: 'ขยายแถบด้านข้าง',
             helloGreeting: 'Hello', sawasdeeGreeting: 'Sawasdee Ka (สวัสดีค่ะ)', mingalaparGreeting: 'Mingalapar',
-            talkToHuman: 'คุยกับเจ้าหน้าที่  👤', provideContactPrompt: 'กรุณาแจ้งชื่อและเบอร์โทรศัพท์ของคุณ เพื่อให้เจ้าหน้าที่ติดต่อกลับไป:',
-            yourName: 'ชื่อของคุณ', yourPhoneNumber: 'เบอร์โทรศัพท์ของคุณ', submit: 'ส่ง', contactSubmitted: 'ขอบคุณค่ะ! เจ้าหน้าที่จะติดต่อกลับไปโดยเร็วที่สุดค่ะ',
+            talkToHuman: 'คุยกับเจ้าหน้าที่  👤', provideContactPrompt: schoolInfo.contactPersonPrompt.th,
+            yourName: 'ชื่อของคุณ', yourPhoneNumber: 'เบอร์โทรศัพท์ของคุณ', submit: 'ส่ง', contactSubmitted: schoolInfo.contactSuccess.th,
             enrollNowFull: 'ลงทะเบียนตอนนี้ (ฉบับเต็ม)', fillOutForm: 'กรอกแบบฟอร์มลงทะเบียน',
-            schoolAddressLabel: 'ที่อยู่', schoolPhoneLabel: 'โทรศัพท์', schoolEmailLabel: 'อีเมล', schoolHoursLabel: 'เวลาทำการ'
+            schoolAddressLabel: 'ที่อยู่', schoolPhoneLabel: 'โทรศัพท์', schoolEmailLabel: 'อีเมล', schoolHoursLabel: 'เวลาทำการ',
+            contactUsTitle: 'ติดต่อเรา', culturalIntroBotGreeting: schoolInfo.culturalIntroBotGreeting.th, // Link to schoolInfo
+            questionLabel: schoolInfo.questionLabel.th
         }
     };
     function t(key, ...args) {
@@ -896,7 +907,7 @@
         addButton('mainMenu', startConversation);
     }
 
-    // New: Updated Enrollment Flow
+    // Updated Enrollment Flow
     function handleEnrollmentFlow(course) {
         clearInputArea();
         appendMessage('ai', `To proceed with enrollment for **${course.name[currentLanguage]}**, you can either fill out our official enrollment form or provide your contact details for a staff member to assist you.`);
@@ -993,7 +1004,7 @@
         // Prompt now explicitly asks for translation into currentLanguage
         const prompt = `You are an AI Thai language tutor.
         Generate one unique, multiple-choice question to test a student's ${difficulty} level knowledge of Thai.
-        The question should be about either vocabulary or simple grammar. Provide the question in ${currentLanguage}.
+        The question should be about either vocabulary or simple grammar. Provide the question in English.
         Provide four possible answers in Thai script with English transliterations, and translate the answers into ${currentLanguage} for clarity.
         Return ONLY a valid JSON object with the keys "question", "options" (an array of 4 strings where each string includes Thai script, transliteration, and ${currentLanguage} translation), and "correctAnswer" (the index of the correct option, 0-3).`;
 
@@ -1089,7 +1100,8 @@
         // Clear chat log to start a fresh interaction for the cultural bot
         chatLog.innerHTML = '';
         clearInputArea();
-        appendMessage('ai', t('culturalIntroBot')); // Use new intro for the AI agent
+        // Use the new translated greeting from schoolInfo
+        appendMessage('ai', schoolInfo.culturalIntroBotGreeting[currentLanguage]);
         handleFreeformQuestion(); // Use the existing freeform input for interaction
     }
 
@@ -1170,11 +1182,11 @@
             { name: "TR. SHWE", qualification: {en: "B.A (Q,Thai, YUFL)", mm: "B.A (Q,Thai, YUFL)", th: "B.A (Q,Thai, YUFL)"}, workExperience: {en: "Thai translator and interpreter in Golden Sea MyanmarCo.,Ltd", mm: "Golden Sea Myanmar Co.,Ltd  တွင်   ထိုင်းဘာသာပြန်နှင့်   စကားပြန် ", th: " นักแปลและล่ามภาษาไทยใน  Golden Sea Myanmar Co.,Ltd"}, teachingExperience: {en: "2 years teaching experiences", mm: " ၂   နှစ်သင်ကြားရေးအတွေ့အကြုံ ", th: " ประสบการณ์การสอน  2  ปี "} },
             { name: "TR. MAY", qualification: {en: "B.A (Q,Thai, YUFL)", mm: "B.A (Q,Thai, YUFL)", th: "B.A (Q,Thai, YUFL)"}, workExperience: {en: "3 years working experiences in Thai Company", mm: " ထိုင်းကုမ္ပဏီတွင်   ၃   နှစ်အလုပ်လုပ်ကိုင်ခဲ့သော   အတွေ့အကြုံ ", th: " ประสบการณ์การทำงาน  3  ปีในบริษัทไทย "}, teachingExperience: {en: "2 years teaching experiences", mm: " ၂   နှစ်သင်ကြားရေးအတွေ့အကြုံ ", th: " ประสบการณ์การสอน  2  ปี "} },
             { name: "TR. HTOO", qualification: {en: "B.A (Q,Thai, YUFL)", mm: "B.A (Q,Thai, YUFL)", th: "B.A (Q,Thai, YUFL)"}, workExperience: {en: "Freelance Thai Translator and Interpreter", mm: " အလွတ်တန်း   ထိုင်းဘာသာပြန်နှင့်   စကားပြန် ", th: " นักแปลและล่ามภาษาไทยอิสระ "}, teachingExperience: {en: "2 years teaching experience", mm: " ၂   နှစ်သင်ကြားရေးအတွေ့အကြုံ ", th: " ประสบการณ์การสอน  2  ปี "} },
-            { name: "TR. PHUE", qualification: {en: "B.A (Q,Thai, YUFL)", mm: "B.A (Q,Thai, YUFL)", th: "B.A (Q,Thai, YUFL)"}, workExperience: {en: "Freelance Thai Translator and Interpreter", mm: " အလွတ်တန်း   ထိုင်းဘာသာပြန်နှင့်   စကားပြန် ", th: " นักแปลและล่ามภาษาไทยอิสระ "}, teachingExperience: {en: "2 years teaching experiences", mm: " ၂   နှစ်သင်ကြားရေးအတွေ့အကြုံ ", th: " ประสบการณ์การสอน  2  ปี "} },
+            { name: "TR. PHUE", qualification: {en: "B.A (Q,Thai, YUFL)", mm: "B.A (Q,Thai, YUFL)", th: "B.A (Q,Thai, YUFL)"}, workExperience: {en: "Freelance Thai Translator and Interpreter", mm: " အလွတ်တန်း   ထိုင်းဘာသာပြန်နှင့်   စကားပြန် ", th: " นักแปลและล่าမဘာသာไทยอิisระ "}, teachingExperience: {en: "2 years teaching experiences", mm: " ၂   နှစ်သင်ကြားရေးအတွေ့အကြုံ ", th: " ประสบการณ์การสอน  2  ปี "} },
             { name: "TR. SAKAR", qualification: {en: "B.A (Q,Thai, YUFL)", mm: "B.A (Q,Thai, YUFL)", th: "B.A (Q,Thai, YUFL)"}, workExperience: {en: "1 year working experience in Thai Company", mm: " ထိုင်းကုမ္ပဏီတွင်   ၁   နှစ်အလုပ်လုပ်ကိုင်ခဲ့သော   အတွေ့အကြုံ ", th: " ประสบการณ์การทำงาน  1  ปีในบริษัทไทย "}, teachingExperience: {en: "1 year teaching experience", mm: " ၁   နှစ်သင်ကြားရေးအတွေ့အကြုံ ", th: " ประสบการณ์การสอน  1  ปี "} },
             { name: "TR. SEINN", qualification: {en: "B.A (Q,Thai, YUFL)", mm: "B.A (Q,Thai, YUFL)", th: "B.A (Q,Thai, YUFL)"}, workExperience: {en: "Freelance Thai Translator and Interpreter", mm: " အလွတ်တန်း   ထိုင်းဘာသာပြန်နှင့်   စကားပြန် ", th: " นักแปลและล่ามภาษาไทยอิสระ "}, teachingExperience: {en: "3 years teaching experience", mm: " ၃   နှစ်သင်ကြားရေးအတွေ့အကြုံ ", th: " ประสบการณ์การสอน  3  ปี "} },
             { name: "TR. HSU", qualification: {en: "B.A (Thai, YUFL)", mm: "B.A (Thai, YUFL)", th: "B.A (Thai, YUFL)"}, workExperience: {en: "Thai Linguist 1 year", mm: " ထိုင်းဘာသာဗေဒပညာရှင်   ၁   နှစ် ", th: " นักภาษาศาสตร์ไทย  1  ปี "}, teachingExperience: {en: "5 years teaching experience", mm: " ၅   နှစ်သင်ကြားရေးအတွေ့အကြုံ ", th: " ประสบการณ์การสอน  5  ปี "} },
-            { name: "TR. PHYU", qualification: {en: "B.A (Thai, YUFL)", mm: "B.A (Thai, YUFL)", th: "B.A (Thai, YUFL)"}, workExperience: {en: "Freelance Thai Translator and Interpreter", mm: " အလွတ်တန်း   ထိုင်းဘာသာပြန်နှင့်   စကားပြန် ", th: " นักแปลและล่าမဘာသာไทยอิสระ "}, teachingExperience: {en: "1 year teaching experience", mm: " ၁   နှစ်သင်ကြားရေးအတွေ့အကြုံ ", th: " ประสบการณ์การสอน  1  ปี "} }
+            { name: "TR. PHYU", qualification: {en: "B.A (Thai, YUFL)", mm: "B.A (Thai, YUFL)", th: "B.A (Thai, YUFL)"}, workExperience: {en: "Freelance Thai Translator and Interpreter", mm: " အလွတ်တန်း   ထိုင်းဘာသာပြန်နှင့်   စကားပြန် ", th: " นักแปลและล่ามภาษาไทยอิสระ "}, teachingExperience: {en: "1 year teaching experience", mm: " ၁   နှစ်သင်ကြားရေးအတွေ့အကြုံ ", th: " ประสบการณ์การสอน  1  ปี "} }
         ]
     };
 
@@ -1190,12 +1202,12 @@
         addButton('mainMenu', startConversation, sidebarNav, '🏠');
     }
 
-    // New: Update school info in sidebar
+    // Update school info in sidebar
     function updateSchoolInfo() {
         const schoolInfoCard = document.querySelector('.school-info-card');
         if (schoolInfoCard) {
             schoolInfoCard.innerHTML = `
-                <h3>${t('contactUsTitle') || 'Contact Us'}</h3>
+                <h3>${t('contactUsTitle')}</h3>
                 <p><strong>${t('schoolAddressLabel')}:</strong> ${schoolInfo.address[currentLanguage]}</p>
                 <p><strong>${t('schoolPhoneLabel')}:</strong> ${schoolInfo.phone}</p>
                 <p><strong>${t('schoolEmailLabel')}:</strong> ${schoolInfo.email}</p>
@@ -1204,25 +1216,36 @@
         }
     }
 
-
-    // New: Play greeting sound based on current language
+    // New: Play greeting sound using Web Speech API
     function playGreetingSound() {
-        // Stop any currently playing audio
-        document.querySelectorAll('audio').forEach(audio => audio.pause());
+        const utterance = new SpeechSynthesisUtterance();
+        let greetingText;
+        let langCode;
 
-        let audioToPlay;
         if (currentLanguage === 'th') {
-            audioToPlay = document.getElementById('audio-th');
+            greetingText = 'สวัสดีค่ะ';
+            langCode = 'th-TH';
         } else if (currentLanguage === 'mm') {
-            audioToPlay = document.getElementById('audio-mm');
+            greetingText = 'မင်္ဂလာပါ';
+            langCode = 'my-MM'; // Myanmar language code, may have limited browser support
         } else { // Default to English
-            audioToPlay = document.getElementById('audio-en');
+            greetingText = 'Hello';
+            langCode = 'en-US';
         }
 
-        if (audioToPlay) {
-            audioToPlay.currentTime = 0; // Rewind to start
-            audioToPlay.play().catch(e => console.error("Error playing audio:", e));
+        utterance.text = greetingText;
+        utterance.lang = langCode;
+
+        // Optional: Select a specific voice if available
+        const voices = speechSynthesis.getVoices();
+        const selectedVoice = voices.find(voice => voice.lang === langCode) || voices.find(voice => voice.lang.startsWith(langCode.substring(0, 2)));
+        if (selectedVoice) {
+            utterance.voice = selectedVoice;
+        } else {
+            console.warn(`Voice for ${langCode} not found, using default.`);
         }
+
+        speechSynthesis.speak(utterance);
     }
 
     // --- APP INITIALIZATION ---
@@ -1252,7 +1275,7 @@
             updateSettingsUI(); // Update button text/icon and greeting button title
         });
 
-        // Thai greeting sound button
+        // Greeting sound button
         greetingBtn.addEventListener('click', playGreetingSound);
 
         createStars();
