Update Contact Address

--- a/index.html
+++ b/index.html
@@ -585,11 +585,11 @@
     // School contact information
     const schoolInfo = {
         address: {
-            en: 'Your School Address Here',
-            mm: 'သင့်ကျောင်းလိပ်စာ',
+            en: 'Shwedagon pagoda road, Yangon, Myanmar',
+            mm: 'ရန်ကုန်မြို့၊ ရွှေတိဂုံဘုရားလမ်း၊ မြန်မာနိုင်ငံ',
             th: 'ที่อยู่โรงเรียนของคุณ'
         },
-        phone: '+95 9XXXXXXXXX', // Replace with actual phone number
+        phone: '+95 9445 224 501', // Replace with actual phone number
         email: 'info@okaythai.com', // Replace with actual email
         businessHours: {
             en: 'Mon-Fri: 9 AM - 5 PM',
