--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
     const translations = {
         en: {
             welcome: ' สวัสดีค่ะ  (Sawasdee ka!) Welcome! I am your AI Concierge for the OKay Thai Language Center. How can I help you today?',
-            findCourse: 'Find a Course for Me', askQuestion: 'Ask a Question', meetLecturers: 'Meet the Lecturers', goBack: 'Go Back',
+            findCourse: 'Find a Course for Me', askQuestion: 'FAQs', meetLecturers: 'Meet the Lecturers', goBack: 'Go Back',
             coursePrompt: 'I can definitely help with that! To recommend the perfect course, could you tell me what type of class you\'re interested in?',
             levelPrompt: (type) => `Great choice! For the ${type}, which level are you interested in?`,
             courseResultHeader: 'Your Recommended Course', enrollPrompt: 'I can guide you through enrollment for this course, or we can explore other options. What would you like to do?',
@@ -732,7 +732,7 @@
             levelTestResult: 'Thank you! Based on your answers, here is my recommendation:',
             levelRecommendation: (level) => `It looks like you have a good grasp of the basics! I recommend starting with our **Normal Class - ${level}** to build on your existing knowledge.`,
             levelCompleteBeginner: 'It looks like you\'re just starting your journey, which is exciting! I recommend our **Normal Class - Basic** course.',
-            viewCourse: 'View This Course', conversationPractice: 'Conversation Practice  💬 ', culturalCompass: 'Cultural Compass  🧭 ',
+            viewCourse: 'View This Course', conversationPractice: 'Conversation Practice  🗣️ ', culturalCompass: 'Chat With Me  💬 ',
             practiceIntro: 'Let\'s practice! Choose a real-world scenario:', practiceScenarioFood: 'Ordering Food', practiceScenarioTaxi: 'Calling a Taxi',
             practiceScenarioDirections: 'Asking for Directions', practiceSoon: 'Excellent choice! The full, interactive role-playing feature is a premium tool for enrolled students. Here\'s a preview of how it would start:',
             culturalIntro: 'I can certainly help with that. What deep cultural question do you have about Thailand?', howToReply: 'How should I reply?',
@@ -751,7 +751,7 @@
         },
         mm: {
             welcome: ' မင်္ဂလာပါ။  OKay Thai Language Center  မှ   ကြိုဆိုပါတယ်။   ကျွန်တော်က  AI Concierge  ပါ။ ဒီနေ့   ဘာအကူအညီပေးရမလဲခင်ဗျာ။ ',
-            findCourse: ' သင်တန်းရှာရန် ', askQuestion: ' မေးခွန်းမေးရန် ', meetLecturers: ' ဆရာ / ဆရာမများနှင့်   တွေ့ဆုံရန် ', goBack: ' နောက်သို့ပြန်သွားရန် ',
+            findCourse: ' သင်တန်းရှာရန် ', askQuestion: ' အမေးများသောမေးခွန်းများ ', meetLecturers: ' ဆရာ / ဆရာမများနှင့်   တွေ့ဆုံရန် ', goBack: ' နောက်သို့ပြန်သွားရန် ',
             coursePrompt: ' ကျွန်တော်ကူညီနိုင်ပါတယ်။ သင့်အတွက်အကောင်းဆုံးသင်တန်းကိုအကြံပြုနိုင်ရန်   ဘယ်လိုသင်တန်းအမျိုးအစားကို   စိတ်ဝင်စားပါသလဲ။ ',
             levelPrompt: (type) => `${type}  အတွက်   ဘယ်အဆင့်ကို   စိတ်ဝင်စားပါသလဲ။ `, courseResultHeader: ' သင်၏   အကြံပြုသင်တန်း ',
             enrollPrompt: ' ဤသင်တန်းအတွက်   စာရင်းသွင်းရန်   လမ်းညွှန်ပေးနိုင်သည်   သို့မဟုတ်   အခြားရွေးချယ်စရာများကို   ရှာဖွေနိုင်ပါသည်။ ဘာလုပ်ချင်ပါသလဲ။ ',
@@ -769,7 +769,7 @@
             levelTestResult: ' ကျေးဇူးတင်ပါတယ် !  သင်၏အဖြေများပေါ်မူတည်၍   ဤသည်မှာ   ကျွန်ုပ်၏အကြံပြုချက်ဖြစ်ပါသည်။ ',
             levelRecommendation: (level) => ` သင်ဟာ   အခြေခံတွေကို   ကောင်းကောင်းနားလည်ထားပုံရပါတယ် ! သင့်ရဲ့ရှိပြီးသားအသိပညာကို   တည်ဆောက်ဖို့   ကျွန်ုပ်တို့ရဲ့  **Normal Class - ${level}** နဲ့   စတင်ဖို့   အကြံပြုလိုပါတယ်။ `,
             levelCompleteBeginner: ' သင်ဟာ   ခရီးတစ်ခုကို   အခုမှစတင်နေတာဖြစ်ပြီး   ဒါက   စိတ်လှုပ်ရှားစရာကောင်းပါတယ် ! ကျွန်ုပ်တို့ရဲ့  **Normal Class - Basic** သင်တန်းကို   အကြံပြုလိုပါတယ်။ ',
-            viewCourse: ' ဤသင်တန်းကိုကြည့်ရန် ', conversationPractice: ' စကားပြောလေ့ကျင့်ခန်း   💬 ', culturalCompass: ' ယဉ်ကျေးမှုဆိုင်ရာမေးခွန်း   🧭 ',
+            viewCourse: ' ဤသင်တန်းကိုကြည့်ရန် ', conversationPractice: ' စကားပြောလေ့ကျင့်ခန်း   🗣️ ', culturalCompass: ' သိလိုရာမေး   💬 ',
             practiceIntro: ' လေ့ကျင့်ကြရအောင်။ လက်တွေ့ဘဝအခြေအနေတစ်ခုကို   ရွေးချယ်ပါ။ ', practiceScenarioFood: ' အစားအစာ   မှာယူခြင်း ', practiceScenarioTaxi: ' တက္ကစီ   ငှားရမ်းခြင်း ',
             practiceScenarioDirections: ' လမ်းညွှန်   မေးမြန်းခြင်း ', practiceSoon: ' ဒါက   ရွေးချယ်မှုကောင်းတစ်ခုပါ။ စာရင်းသွင်းပြီးနောက်   ပ ရီ မီယံကျောင်းသားအတွေ့အကြုံ၏   တစ်စိတ်တစ်ပိုင်းအဖြစ်   အပြန်အလှန်အကျိုးသက်ရောက်မှုရှိသော   အခန်းကဏ္ဍသရုပ်ဆောင်ခြင်းအင်္ဂါရပ်အပြည့်အစုံကို   ရရှိနိုင်မှာဖြစ်ပါတယ်။ ၎င်းသည်   ဤသို့စတင်မည်ဖြစ်သည် ...',
             culturalIntro: ' ကူညီနိုင်ပါတယ်။   ထိုင်းယဉ်ကျေးမှုနဲ့ပတ်သက်ပြီး   ဘယ်လိုနက်နဲတဲ့မေးခွန်းမျိုး   သိချင်ပါသလဲ။ ', howToReply: ' ဘယ်လိုပြန်ဖြေရမလဲ။ ',
@@ -788,7 +788,7 @@
         },
         th: {
             welcome: ' สวัสดีค่ะ ! ยินดีต้อนรับสู่  OKay Thai Language Center  ดิฉันคือ  AI Concierge  ค่ะ   วันนี้มีอะไรให้ช่วยคะ ',
-            findCourse: ' ค้นหาคอร์สของคุณ ', askQuestion: ' ถามคำถาม ', meetLecturers: ' พบกับอาจารย์ ', goBack: ' กลับไป ',
+            findCourse: ' ค้นหาคอร์สของคุณ ', askQuestion: ' คำถามที่พบบ่อย', meetLecturers: ' พบกับอาจารย์ ', goBack: ' กลับไป ',
             coursePrompt: ' ช่วยได้แน่นอนค่ะ ! เพื่อแนะนำคอร์สที่สมบูรณ์แบบที่สุด   ไม่ทราบว่าสนใจคลาสประเภทไหนคะ ',
             levelPrompt: (type) => ` ยอดเยี่ยมค่ะ ! สำหรับ  ${type}  สนใจระดับไหนคะ `, courseResultHeader: ' คอร์สแนะนำของคุณ ',
             enrollPrompt: ' สามารถแนะนำขั้นตอนการลงทะเบียนสำหรับคอร์สนี้   หรือจะดูตัวเลือกอื่นๆ   ก่อนก็ได้ค่ะ   ต้องการทำอะไรต่อคะ ',
@@ -806,7 +806,7 @@
             levelTestResult: ' ขอบคุณค่ะ ! จากคำตอบของคุณ   นี่คือคำแนะนำของดิฉันค่ะ :',
             levelRecommendation: (level) => ` ดูเหมือนว่าคุณมีความเข้าใจพื้นฐานเป็นอย่างดี ! ขอแนะนำให้เริ่มต้นด้วย  **Normal Class - ${level}** ของเราเพื่อต่อยอดจากความรู้ที่มีอยู่ค่ะ `,
             levelCompleteBeginner: ' ดูเหมือนว่าคุณเพิ่งเริ่มต้นการเดินทางซึ่งน่าตื่นเต้นมากค่ะ ! ขอแนะนำคอร์ส  **Normal Class - Basic** ของเราค่ะ ',
-            viewCourse: ' ดูคอร์สนี้ ', conversationPractice: ' ฝึกสนทนา   💬 ', culturalCompass: ' เข็มทิศวัฒนธรรม   🧭 ',
+            viewCourse: ' ดูคอร์สนี้ ', conversationPractice: ' ฝึกสนทนา   🗣️ ', culturalCompass: ' เข็มทิศวัฒนธรรม   💬 ',
             practiceIntro: ' มาฝึกกันเถอะ ! เลือกสถานการณ์จริง :', practiceScenarioFood: ' สั่งอาหาร ', practiceScenarioTaxi: ' เรียกแท็กซี่ ',
             practiceScenarioDirections: ' ถามทาง ', practiceSoon: ' เป็นตัวเลือกที่ยอดเยี่ยมค่ะ ! ฟีเจอร์การแสดงบทบาทสมมติแบบโต้ตอบเต็มรูปแบบเป็นส่วนหนึ่งของประสบการณ์นักเรียนพรีเมียมหลังจากการลงทะเบียนค่ะ   มันจะเริ่มต้นแบบนี้ ...',
             culturalIntro: ' ช่วยได้ค่ะ   มีคำถามเชิงลึกเกี่ยวกับวัฒนธรรมไทยอะไรที่อยากรู้คะ ', howToReply: ' ฉันควรตอบอย่างไร ?',
@@ -1284,15 +1284,15 @@
     // Function to populate the sidebar navigation
     function populateSidebarNav() {
         sidebarNav.innerHTML = ''; // Clear existing buttons
-    addButton('findCourse', showCourseOptions, sidebarNav, ' 📚 ');
-    addButton('findLevel', startLevelTest, sidebarNav, ' 🧠 ');
-    addButton('conversationPractice', startConversationPractice, sidebarNav, ' 💬 ');
-    addButton('meetLecturers', showLecturers, sidebarNav, ' 🧑‍🏫 ');
-    addButton('askQuestion', showFaqOptions, sidebarNav, ' ❓ ');
-    addButton('culturalCompass', startCulturalCompassChatbot, sidebarNav, ' 🧭 ');
-    addButton('contactUsTitle', showContactInfo, sidebarNav, ' 📞 '); // New line
-    addButton('mainMenu', startConversation, sidebarNav, ' 🏠 ');
-    }
+        addButton('findCourse', showCourseOptions, sidebarNav, ' 📚 ');
+        addButton('culturalCompass', startCulturalCompassChatbot, sidebarNav, ' 💬 '); // Moved to the top and renamed
+        addButton('findCourse', showCourseOptions, sidebarNav, ' 📚 ');
+        addButton('findLevel', startLevelTest, sidebarNav, ' 🧠 ');
+        addButton('conversationPractice', startConversationPractice, sidebarNav, ' 🗣️ '); // Changed icon for clarity
+        addButton('meetLecturers', showLecturers, sidebarNav, ' 🧑‍🏫 ');
+        addButton('askQuestion', showFaqOptions, sidebarNav, ' ❓ '); // Name changed to "FAQs"
+        addButton('contactUsTitle', showContactInfo, sidebarNav, ' 📞 ');
+        addButton('mainMenu', startConversation, sidebarNav, ' 🏠 ');
 
     // New: Play greeting sound using Web Speech API
     function playGreetingSound() {
