Update Sound button Layout

--- a/index.html
+++ b/index.html
@@ -594,9 +594,11 @@
                 <p>မင်္ဂလာပါ။ สวัสดีค่ะ ! 🙏🙏🙏 How can I assist you today?</p>
             </div>
             <div class="top-right-settings">
-                <button class="settings-btn" id="greeting-btn" title="Play Greeting">🔊</button>
                 <button class="settings-btn" id="langBtn" title="Language"> 🌐 </button>
                 <button class="settings-btn" id="themeBtn" title="Theme"> 🎨 </button>
+            </div>
+            <div class="top-left-settings">
+                <button class="settings-btn" id="greeting-btn" title="Play Greeting">🔊</button>
             </div>
         </div>
         <div id="chat-log"></div>
@@ -625,8 +627,8 @@
             <div class="settings-options" id="theme-options">
                 <button class="option-btn" data-theme="theme-default"> ✨  Celestial Aura</button>
                 <button class="option-btn" data-theme="theme-midnight-bloom">  🌙   Midnight Bloom</button>
-                <button class="option-btn" data-theme="theme-high-contrast"> 👁️  High Contrast</button>
-                <button class="option-btn" data-theme="theme-low-sensory"> 🧠  Low Sensory</button>
+                <button class="option-btn" data-theme="theme-high-contrast"> 👁️  High Contrast (Colourblind-Friendly)</button>
+                <button class="option-btn" data-theme="theme-low-sensory"> 🧠  Low Sensory (Autism-Friendly)</button>
                 <button class="option-btn" data-theme="theme-pride"> 🌈  Pride</button>
             </div>
         </div>
