Update Button Layout

--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
         <nav class="sidebar-nav" id="sidebar-nav">
             </nav>
         <a href="https://www.facebook.com/share/1AhRXANLEm/?mibextid=wwXIfr" target="_blank" class="action-button facebook-link">
-            <span class="button-icon">📘</span> <span class="button-text">Facebook Page</span>
+            <span class="button-text">Facebook Page</span>
         </a>
     </div>
 
@@ -1288,11 +1288,11 @@
         sidebarNav.innerHTML = ''; // Clear existing buttons
     addButton('culturalCompass', startCulturalCompassChatbot, sidebarNav, ' 💬 ');
     addButton('findCourse', showCourseOptions, sidebarNav, ' 📚 ');
-    addButton('findLevel', startLevelTest, sidebarNav, ' 🧠 ');
-    addButton('conversationPractice', startConversationPractice, sidebarNav, ' 🗣️ ');
     addButton('meetLecturers', showLecturers, sidebarNav, ' 🧑‍🏫 ');
     addButton('askQuestion', showFaqOptions, sidebarNav, ' ❓ ');
-    addButton('contactUsTitle', showContactInfo, sidebarNav, ' 📞 '); // New line
+    addButton('findLevel', startLevelTest, sidebarNav, ' 🧠 ');
+    addButton('conversationPractice', startConversationPractice, sidebarNav, ' 🗣️ ');
+    addButton('contactUsTitle', showContactInfo, sidebarNav, ' 📞 '); 
     addButton('mainMenu', startConversation, sidebarNav, ' 🏠 ');
     }
 
