Update Facebook page

--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
         <nav class="sidebar-nav" id="sidebar-nav">
             </nav>
         <a href="https://www.facebook.com/share/1AhRXANLEm/?mibextid=wwXIfr" target="_blank" class="action-button facebook-link">
-            <span class="button-text">Facebook Page</span>
+            <span class="button-icon">👀</span> <span class="button-text">Facebook Page</span>
         </a>
     </div>
 
